<resources>
    <string name="app_name">Lap 6</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">Login name</string>
    <string name="passwd">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">Check Box</string>
    <string name="swt">What does this do?</string>
    <string name="login_btn">Login</string>
    <string name="dialog_title"> Warning !!</string>
    <string name="dialog_message">Do you want to finish this Activity?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="chatbutton">Start Chat</string>
    <string name="send_btn"> Send </string>

    <string name="WeatherForecastBTN"> WeatherForecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="newMessage">New Message</string>
    <string name="toolButton">TestToolBar</string>

</resources>
