<?xml version="1.0" encoding="utf-8"?>
<GridLayout

    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RadioButton" />

    <CheckBox

        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/CheckBox"
        android:visibility="visible" />
    <Switch

        android:id="@+id/switch_bar"
        android:text="@string/swt"
        android:layout_column="0"
        android:layout_row="1"
        />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_row="1"
        android:layout_column="1"
        android:src="@drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        />
</GridLayout>